<?xml version="1.0"?>
<package format="2">
  <name>hateb_planner_people_interface</name>
  <version>1.0.0</version>
  <description>
    Converting people tracking data to fit HATeb Planner.
  </description>

  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>people_msgs</depend>
  <depend>people_msgs_utils</depend>
  <!-- https://github.com/harmishhk/hanp_msgs -->
  <depend>hanp_msgs</depend>
</package>
